coiso de lado 1

--- a/Inicial.html
+++ b/Inicial.html
@@ -1,8 +1,13 @@
 <html>
 <meta charset="UTF-8" />
 <body>
-<aside>
 <h1> Rita é banana </h1>
+<aside>
+<div>
+<b>Menu</b><br>
+HTML<br>
+CSS<br>
+JavaScript</div>
 </aside>
 </body>
 </html>
